rubric list scrollbar bugfix

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -290,8 +290,7 @@ header {
 .student-list-scroll{
     overflow-y: auto;
     overflow-x: hidden;
-    position: relative;
-
+    height: 14cm;
 }
 
 .studet-list-text{
